Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61656

Crash with SkyboxEntity and ClearBuffers without NoDraw

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.9.0
    • Qt3D
    • None
    • Ubuntu 16.04 LTS 64-bit, Intel i7 4700MQ, GeForce GT730M

    Description

      If i add a SkyboxEntity to a Scene3D, and a ClearBuffers node the the render settings of the same scene 3d, without adding a nodraw the application crashes.

      How to reproduce:

      Run the attached example project, it should crash imitatively with the error: "The program has unexpectedly finished."

      When uncommenting the NoDraw element on line 48 in main.qml, or commenting out the SkyboxEntity element on line 64 in main.qml, the application will no longer crash when run.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            whagen Wieland Hagen
            matiasvc Matias Christensen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes