Fix renderer crash when camera is not set via CameraSelector

Entities would try to render and get their projection-matrix based uniforms
from the camera lens, but that is NULL. Print a warning in that case,
as that means that either a NoDraw is missing or a CameraSelector.

Task-number: QTBUG-61656
Change-Id: Ie2bd0d115f3f61568c5b176c6a22500d29495328
Reviewed-by: Kevin Ottens <kevin.ottens@kdab.com>
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>